added static files and css file

--- a/character/templates/character/index.html
+++ b/character/templates/character/index.html
@@ -11,7 +11,7 @@
             <div class="row">
                 {% for character in character_list %}
                 <div class="col-md-4">
-                    <p class="character">Character: {{character.name}}</p>
+                    <p class="character">Character: {{character.name.name}}</p>
                 </div>
                 {% endfor %}
             </div>
