--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+{% url 'home' as home_url %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,9 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disc Drive Tracker</title>
 
-    <!-- Bootstrap import -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
