--- a/character/templates/character/index.html
+++ b/character/templates/character/index.html
@@ -1,21 +1,30 @@
 {% extends "base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 <!-- index.html content starts here -->
-<div class="container-fluid">
-    <div class="row">
+<h1>{{ character.name }}</h1>
 
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for character in character_list %}
-                <div class="col-md-4">
-                    <p class="character">Character: {{character.name}}</p>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
+<!-- Display disc drives -->
+<h2>Disc Drives:</h2>
+<ul>
+    {% for disc in discs %}
+    <li>
+        <strong>{{ disc.set }}</strong> - {{ disc.main_stat }} <br>
+        <strong>Stats:</strong> {{ disc.stat_1 }}, {{ disc.stat_2 }}, {{ disc.stat_3 }}, {{ disc.stat_4 }}
+    </li>
+    {% endfor %}
+</ul>
 
-<!-- index.html content ends here -->
+    <!-- Display the form to create a new Disc -->
+    <h2>Create a New Disc:</h2>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form | crispy }} 
+        <button type="submit">Save Disc</button>
+    </form>
+
+
 {% endblock %}
