included comments noting where current code is not my own

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+/* all of the below css code was written by code institute, I've used it for now prior to creating my own. */
+
 body {
     background-color: #F9FAFC;
 }
