--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 
 {% url 'home' as home_url %}
 
+<!-- Base HTML taken from Code Institute codestar to modify later. Majority of the below was written by code institute -->
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
